# src/routes.ts
@@ -9,6 +9,7 @@ import { resultadosRouter } from "./modules/resultados/resultados.routes.js";
 import { apuestasRouter } from "./modules/apuestas/apuestas.routes.js";
 import { calculosRouter } from "./modules/calculos/calculos.routes.js";
 import { pagosRouter } from "./modules/pagos/pagos.routes.js";
+import { dashboardRouter } from "./modules/dashboard/dashboard.routes.js";
 
 
 export const router = Router();
@@ -23,3 +24,4 @@ router.use("/jornadas", resultadosRouter);
 router.use("/jornadas", apuestasRouter);
 router.use("/calculos", calculosRouter);
 router.use("/pagos", pagosRouter);
+router.use("/dashboard", dashboardRouter);
